--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_DOCUMENTS"/>
 
     <application
         android:allowBackup="true"
@@ -13,13 +15,19 @@
         android:theme="@style/Theme.BookAppAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.DashboardUserActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.LibraryActivity"
             android:exported="false" />
@@ -29,6 +37,23 @@
         <activity
             android:name=".activities.ProfileActivity"
             android:exported="false" />
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.PdfDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.PdfViewActivity"
+            android:exported="false" />
+        <activity android:name=".activities.ForgotPasswordActivity" />
+        <activity android:name=".activities.DashboardAdminActivity" />
+        <activity android:name=".activities.CategoryAddActivity" />
+        <activity
+            android:name=".activities.AddBookActivity"
+            android:exported="false" />
+
+
     </application>
 
 </manifest>
