--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.BookAppAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".activities.DashboardUserActivity"
@@ -44,6 +44,9 @@
             android:name=".activities.PdfDetailActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.PdfViewActivity"
             android:exported="false" />
         <activity android:name=".activities.ForgotPasswordActivity" />
@@ -52,7 +55,9 @@
         <activity
             android:name=".activities.AddBookActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".activities.UserListActivity"
+            android:exported="false" />
 
     </application>
 
